// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppealInformation Displays AOD docket when appellant is advanced on the docket 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              <span
                data-css-1ptmrda=""
              >
                AOD
              </span>
              ,
               
            </span>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                currentitem="false"
                data-event="focus mouseenter"
                data-event-off="keydown mouseleave"
                data-for="badge-200805-541"
                data-tip="true"
                role="tooltip"
                tabindex="0"
              >
                <span
                  aria-label="Hearing Request"
                  data-css-2moai0=""
                >
                  H
                </span>
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip place-bottom type-dark "
                  data-id="tooltip"
                  id="badge-200805-541"
                >
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            Clarence Darrow
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            <span
              data-css-1ptmrda=""
            >
              AOD
            </span>
            ,
             
          </span>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200805-541"
              data-tip="true"
              role="tooltip"
              tabindex="0"
            >
              <span
                aria-label="Hearing Request"
                data-css-2moai0=""
              >
                H
              </span>
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200805-541"
              >
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          Clarence Darrow
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Displays date of death when present 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                currentitem="false"
                data-event="focus mouseenter"
                data-event-off="keydown mouseleave"
                data-for="badge-200805-541"
                data-tip="true"
                role="tooltip"
                tabindex="0"
              >
                <span
                  aria-label="Hearing Request"
                  data-css-2moai0=""
                >
                  H
                </span>
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip place-bottom type-dark "
                  data-id="tooltip"
                  id="badge-200805-541"
                >
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            Clarence Darrow
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Date of Death
          </strong>
          <pre>
            01/01/2021
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200805-541"
              data-tip="true"
              role="tooltip"
              tabindex="0"
            >
              <span
                aria-label="Hearing Request"
                data-css-2moai0=""
              >
                H
              </span>
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200805-541"
              >
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          Clarence Darrow
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Date of Death
        </strong>
        <pre>
          01/01/2021
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Displays no representative when POA is null 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                currentitem="false"
                data-event="focus mouseenter"
                data-event-off="keydown mouseleave"
                data-for="badge-200805-541"
                data-tip="true"
                role="tooltip"
                tabindex="0"
              >
                <span
                  aria-label="Hearing Request"
                  data-css-2moai0=""
                >
                  H
                </span>
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip place-bottom type-dark "
                  data-id="tooltip"
                  id="badge-200805-541"
                >
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            No representative
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200805-541"
              data-tip="true"
              role="tooltip"
              tabindex="0"
            >
              <span
                aria-label="Hearing Request"
                data-css-2moai0=""
              >
                H
              </span>
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200805-541"
              >
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          No representative
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Displays source appeal link when case type is CAVC remand 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              <span
                data-css-1ptmrda=""
              >
                CAVC
              </span>
              ,
            </span>
            <a
              href="/queue/appeals/123"
            >
              <span>
                Court Remand
              </span>
              <div>
                VLJ 
                Judge Name
              </div>
            </a>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                currentitem="false"
                data-event="focus mouseenter"
                data-event-off="keydown mouseleave"
                data-for="badge-200805-541"
                data-tip="true"
                role="tooltip"
                tabindex="0"
              >
                <span
                  aria-label="Hearing Request"
                  data-css-2moai0=""
                >
                  H
                </span>
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip place-bottom type-dark "
                  data-id="tooltip"
                  id="badge-200805-541"
                >
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            Clarence Darrow
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            <span
              data-css-1ptmrda=""
            >
              CAVC
            </span>
            ,
          </span>
          <a
            href="/queue/appeals/123"
          >
            <span>
              Court Remand
            </span>
            <div>
              VLJ 
              Judge Name
            </div>
          </a>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200805-541"
              data-tip="true"
              role="tooltip"
              tabindex="0"
            >
              <span
                aria-label="Hearing Request"
                data-css-2moai0=""
              >
                H
              </span>
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200805-541"
              >
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          Clarence Darrow
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Displays veteran name when appellant is the veteran 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Appellant Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                currentitem="false"
                data-event="focus mouseenter"
                data-event-off="keydown mouseleave"
                data-for="badge-200805-541"
                data-tip="true"
                role="tooltip"
                tabindex="0"
              >
                <span
                  aria-label="Hearing Request"
                  data-css-2moai0=""
                >
                  H
                </span>
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip place-bottom type-dark "
                  data-id="tooltip"
                  id="badge-200805-541"
                >
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            No representative
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Appellant Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200805-541"
              data-tip="true"
              role="tooltip"
              tabindex="0"
            >
              <span
                aria-label="Hearing Request"
                data-css-2moai0=""
              >
                H
              </span>
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200805-541"
              >
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          No representative
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Matches snapshot with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                currentitem="false"
                data-event="focus mouseenter"
                data-event-off="keydown mouseleave"
                data-for="badge-200805-541"
                data-tip="true"
                role="tooltip"
                tabindex="0"
              >
                <span
                  aria-label="Hearing Request"
                  data-css-2moai0=""
                >
                  H
                </span>
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip place-bottom type-dark "
                  data-id="tooltip"
                  id="badge-200805-541"
                >
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            Clarence Darrow
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              currentitem="false"
              data-event="focus mouseenter"
              data-event-off="keydown mouseleave"
              data-for="badge-200805-541"
              data-tip="true"
              role="tooltip"
              tabindex="0"
            >
              <span
                aria-label="Hearing Request"
                data-css-2moai0=""
              >
                H
              </span>
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip place-bottom type-dark "
                data-id="tooltip"
                id="badge-200805-541"
              >
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          Clarence Darrow
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
